package packet.game;

//防沉迷-实名认证
message AntiAddictionRequest {
	optional string phoneNumber = 1; //手机号码
	optional string playerIdentityNumber = 2; //身份证号
	optional string playerRealName = 3;  //真实姓名
	optional string playerAddress = 4;  //地址
	optional string playerWeiXinID = 5;  //微信
	optional string playerQQID = 6;  //QQ
}

message AntiAddictionResponse {

}

//注册新用户
message RegisterRequest {
	optional string account = 1; //帐号
	optional string password = 2; //密码
	optional string nickname = 3;  //昵称
	optional sint32 deviceFlag = 4; //设备号 //设备号 1:ios 2:android 3:winphon 4:other
}

message RegisterResponse {
	
}

//注册新用户
message VistorRegisterRequest {
	optional sint32 deviceFlag = 1; //设备号 1:ios 2:android 3:winphon 4:other
	optional string deviceId = 2; //设备唯一id

}

message VistorRegisterResponse {
	optional string account = 1; //帐号
	optional string password = 2; //密码
}

message RoomResultRequest{
	optional sint64 roomId = 1; //可选，如果有该参数，则查询某个房间的战绩明细，否则查询所有房间的总战绩。
	required sint64 clubId = 2; //必选,-1:查询该玩家的普通场战绩,否则查询整个俱乐部积分场的
	required sint32 pageNum = 3; //必选,第几页
}

message RoomResultResponse{
    required sint64 clubId = 1; //必选,-1:查询该玩家的普通场战绩,否则查询整个俱乐部积分场的
    required sint32 pageNum = 2; //必选,第几页
	repeated RoomResultModel list = 3;
}

message RoomResultModel {
    optional sint64 roomId = 1; //房间id
	optional string roomName = 2; //房间名称
	optional string roomCode = 3; //房间编号
	optional string playerTime = 4;  //对战时间
	optional string gameCount = 5;  //局数
	optional sint64 videoId = 6;//回放码
	optional string gameId = 7;//
	repeated PlayerScoreModel playerScore = 8; //玩家战绩
}

message PlayerScoreModel{
	optional string playerName = 1;//昵称
	optional int64 playerId = 2; //id
	optional int32 score = 3; //分数
}

message MallProductRequest { //空包
	
}

message MallProductResponse {
	repeated MallProductModel products = 1; //商品列表
	optional int32 hasInviteCode = 2; //是否绑定邀请码0:未绑定,1:已绑定
}

message MallProductModel {
   optional string id = 1; //商品id
   optional string name = 2 ; //商品名称   
   optional string image = 3; //商品图片
   optional int32 category = 4; //分类0 金币 1 房卡
   optional int32 price = 5 ; //价格
   optional int32 itemCount = 6; //道具数量
}

message GenOrderRequest {
	optional int32 platformId = 1; //1 微信 2支付宝 3测试 4苹果
	optional string productId = 2; //商品id
	optional int32 playerId = 3; //玩家id
}

message GenOrderResponse {
	optional string orderId = 1; //订单id
	optional int32 platformId = 2; //1 微信 2支付宝 3测试 4.苹果
	optional bytes data = 3; //签名数据，平台相关
}

message ConfirmOrderRequest{
   optional string orderId = 1; //订单id
   optional int32 platformId = 2; //1 微信 2支付宝 3测试
   optional int32 result = 3; //结果 1 支付成功  2 支付失败 3 放弃
   optional bytes data = 4; //平台相关数据
}
message IPABuyItemComplete{
   optional string orderId = 1; //订单id
   optional string result = 2; //结果
}

message RoomConfigResponse {
	repeated RoomConfigModel roomList = 1;
}

message RoomConfigModel {
	optional string roomId = 1;
	optional string roomName = 2;
	optional string roomType = 3;
	optional string matchType = 4;
	optional int32 baseScore = 5; //底分
	optional int32 minCoinLimit = 6;
	optional int32 maxCoinLimit = 7;
	optional string icon = 8;
	optional int32 fee = 9; //台费	
	optional int32 onlineNum = 10; //在线人数
}

message ServerChangeSyn {
	optional string msgServerAddr = 1; //消息服务器地址，格式 ip:port
	optional string gameServerAddr = 2; //游戏服务器地址，格式 ip:port
	optional string hallServerAddr = 3; //大厅服务器地址，格式 ip:port
	optional string rankServerAddr = 4; //消息服务器地址，格式 ip:port
	optional string taskServerAddr = 5; //消息服务器地址，格式 ip:port
}

message LogoutSyn {
	optional string reason = 1; //比如：1.你已被管理员强制退出登录     2.你的帐号在另一个设备上登录。
}

//零钱支付
message PocketPay {
	required int32 playerId = 1; //玩家id
	required string productId = 2; //商品id
}

//登录时未绑定上级推送用户绑定邀请码(服务器单向推送)
message NeedBindInviteCode {

}

//提交邀请码请求
message SubmitInviteCodeRequest {
	required string inviteCode = 1; //邀请码id
	required string token = 2;//微信token
	required string openid = 3;//微信openid
	required string unionid = 4;//微信unionid
}

//提交邀请码回复
message SubmitInviteCodeResponse {
	required sint32 code = 1; //返回码,0:成功,1:失败
	optional string msg = 2; //返回描述,成功或失败原因
}

//同步签到与轮盘消息(用户打开面板显示)
message SignSynRequest {

}

//同步签到消息(用户打开面板显示)
message SignSynResponse {
	required sint32 signNum = 1;//剩余签到次数
	required sint32 signDays = 2;//签到天数
	required sint32 lunPanNum = 3;//剩余轮盘次数
}


//签到
message SignRequest {

}

//签到回复
message SignResponse {
	required sint32 signNum = 1;//剩余签到次数
	required sint32 signDays = 2;//剩余签到天数
}

//轮盘
message SymplecticRunnerRequest {

}

//轮盘回复
message SymplecticRunnerResponse {
	required sint32 id = 1;//轮盘id
	optional sint32 lunpanNum = 2;//剩余轮盘次数
}

//活动开始提示
message ActivityStartNotify {
	required sint32 activityType = 1;//活动类型,0:祈福活动
}

//活动结束提示
message ActivityFinishNotify {
	required sint32 activityType = 1;//活动类型,0:祈福活动
}

//祈福请求
message PrayRequest {
	required sint32 num = 1;//点击次数
}

//祈福回复
message PrayResponse {
	required string awardName = 1;//奖励名称
	required string awardNum = 2;//奖励数量
}

//是否有首冲
message ShouChongSyn {
	required sint32 shouchong1 = 1;//0:有,1:无
	required sint32 shouchong2 = 2;//0:有,1:无
	required sint32 shouchong3 = 3;//0:有,1:无
}

//请求回放
message VideoRequest {
	optional sint64 videoId = 4;//回放码
}

//回放回复
message VideoResponse {
	required sint64 videoId = 1;//回放码
	required string msg = 2;//json文件
}







